unpackaged/main/default/objects/ETT_Driver__c/ETT_Driver__c.object-meta.xml
<CustomObject>
    <label>Driver</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drivers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>