unpackaged/main/default/objects/ETT_Driver__c/fields/ETT_Designation_Code__c.field-meta.xml
<CustomField>
    <fullName>ETT_Designation_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Designation Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>