unpackaged/main/default/objects/ETT_Driver__c/fields/ETT_Emirates_ID__c.field-meta.xml
<CustomField>
    <fullName>ETT_Emirates_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Emirates ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>