unpackaged/main/default/objects/ETT_Driver__c/fields/ETT_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>ETT_Last_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>