unpackaged/main/default/objects/ETT_Driver__c/fields/ETT_License_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>ETT_License_Expiry_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>License Expiry Date</label>
    <type>Date</type>
</CustomField>