unpackaged/main/default/objects/ETT_Driver__c/fields/ETT_License_Number__c.field-meta.xml
<CustomField>
    <fullName>ETT_License_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>License Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>