unpackaged/main/default/objects/ETT_Driver__c/fields/ETT_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>ETT_Mobile_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mobile Number</label>
    <type>Phone</type>
</CustomField>