unpackaged/main/default/objects/ETT_Driver__c/fields/ETT_Visa_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>ETT_Visa_Expiry_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Visa Expiry Date</label>
    <type>Date</type>
</CustomField>